# lidar-cam-calib

./: CMakeLists.txt  README.md
launch/: cornerPhoto.launch  getExt1.launch  getExt2.launch  pcdTransfer.launch  projectCloud.launch
scripts/: corner_lidar.py  corner_photo.py
src/: cam_lid_g2o.cpp  corner_photo.cpp  pcdTransfer.cpp  projectCloud.cpp  result_verify.h
